test/fixtures/astRegression/shouldFail/localVariableDeclarations/MissingSemicolon.sand
pub class MissingSemicolon {
    foo() {
        let bar = 2
    }
}